--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap");
 
 body {
-  font-family: "Righteous", cursive;
-  color: #d14f4f;
+  font-family: "Fira Sans", cursive;
+  color: #ffffff;
   line-height: 1.7;
-  font-size: 19px;
+  font-size: 20px;
   background-color: #222222;
 }
 
@@ -17,7 +17,7 @@ video {
   display: block;
 }
 
-/_ navbar ---------- _/ .navbar {
+.navbar {
   background-color: rgba(22, 22, 22, 0.8);
   display: flex;
   justify-content: center;
@@ -33,11 +33,11 @@ video {
 }
 
 .link:hover {
-  color: #f59494;
+  color: #ffffff;
   transform: scale(1.1);
 }
 
-/_ nasa photo ---------- _/ .nasa-photo {
+.nasa-photo {
   display: flex;
   padding: 40px;
   margin: 0 auto;
@@ -85,11 +85,20 @@ video {
   justify-content: space-around;
 }
 
+.home h1 {
+  color: #fff;
+  display: flex;
+  text-align: center;
+  margin-top: 10.25rem;
+  padding: 0 6.25rem;
+}
+
 .home-link {
   font-size: 40px;
-  background: #f59494;
+  background: #181e2e;
   display: flex;
   justify-content: space-around;
+  margin-bottom: 4.25rem;
   padding: 40px 80px;
   color: #fff;
   border-radius: 50%;
@@ -99,6 +108,6 @@ video {
 }
 
 .home-link:hover {
-  border-radius: 5px;
-  background: #e77171;
+  border-radius: 10px;
+  background: #252b5e;
 }
