--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,7 @@ video {
   height: 100vh;
   align-items: center;
   justify-content: space-around;
+  background-image: url("https://images.pexels.com/photos/149988/pexels-photo-149988.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 }
 
 .home h1 {
